# kinect_publisher

./: CMakeLists.txt  kinect_publisher.launch  package.xml
include/: KinectDevice.hpp  MyFreenectDevice.hpp  kinect_publisher_node.hpp
src/: KinectDevice.cpp  MyFreenectDevice.cpp  kinect_publisher_node.cpp
