<?xml version="1.0"?>
<package format="2">
  <name>kinect_publisher</name>
  <version>0.0.0</version>
  <description>Converts kinect data to ROS messages</description>
  <maintainer email="bemilio@student.ethz.ch">Emilio Benenati</maintainer>
  
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>
  
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>libfreenect</depend>
  <depend>opencv2_catkin</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>

</package>
